--- a/login/index_files/apple.css
+++ b/login/index_files/apple.css
@@ -24,7 +24,7 @@ body {
   position: relative;
   padding: 0;
   margin: 0;
-  background: #cf6f2a url("../img/background.png") repeat-x center center;
+  background: #2f4494 url("../img/background.png") repeat-x center center;
   background-size: cover;
   direction: ltr;
   height: 100vh;
